--- a/pkg-config/CMakeLists.txt
+++ b/pkg-config/CMakeLists.txt
@@ -13,6 +13,7 @@ SET (PkgConfigDescription "${PROJECT_DESCRIPTION}")
 SET (PkgConfigVersion "${MAJOR}.${MINOR}.${PATCH}")
 SET (PkgConfigLibs "-L\${libdir}")
 SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-iface-${MAJOR}")
+SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-host-iface-${MAJOR}")
 SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-loader-${MAJOR}")
 SET (PkgConfigLibsPrivate "")
 SET (PkgConfigCflags "")
