Link by SONAME using pkg-config.

--- a/pkg-config/CMakeLists.txt
+++ b/pkg-config/CMakeLists.txt
@@ -12,9 +12,9 @@ SET (PkgConfigName "${CMAKE_PROJECT_NAME}")
 SET (PkgConfigDescription "${PROJECT_DESCRIPTION}")
 SET (PkgConfigVersion "${MAJOR}.${MINOR}.${PATCH}")
 SET (PkgConfigLibs "-L\${libdir}")
-SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-iface-${MAJOR}")
-SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-host-iface-${MAJOR}")
-SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-loader-${MAJOR}")
+SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-iface.so.${MAJOR}")
+SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-host-iface.so.${MAJOR}")
+SET (PkgConfigLibs "${PkgConfigLibs} -l${PROJECT_LOWERCASE_NAME}-loader.so.${MAJOR}")
 SET (PkgConfigLibsPrivate "")
 SET (PkgConfigCflags "")
 
