--- a/src/loader/CMakeLists.txt
+++ b/src/loader/CMakeLists.txt
@@ -2,8 +2,10 @@ SET (LibName ${PROJECT_LOWERCASE_NAME}-loader)
 FILE (GLOB_RECURSE LibSources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} PluginLoader.vala)
 SET (LibPackages gee-0.8 gmodule-2.0 gio-2.0)
 SET (LibCustomVapis ${CMAKE_BINARY_DIR}/src/iface/${PROJECT_LOWERCASE_NAME}-iface-${MAJOR}.vapi)
-SET (LibExtraSources ${PROJECT_SOURCE_DIR}/src/library_constructor.c)
 SET (LibInstall ON)
+SET (LibExtraSources ${CMAKE_CURRENT_BINARY_DIR}/library_constructor.c)
+SET (LC_RELATIVE_PREFIX "..")
+CONFIGURE_FILE ( "${CMAKE_SOURCE_DIR}/cmake/backbone/templates/library_constructor.c.in" "${LibExtraSources}")
 SET (LibLinkLibs ${PROJECT_LOWERCASE_NAME}-iface gmodule-2.0)
 INCLUDE_DIRECTORIES ("${CMAKE_BINARY_DIR}/src/iface")
 INCLUDE (ValaLibCommonRules)
