cmake/backbone: Combine Vala{Lib,Plugin}CommonRules.

--- a/test/plugins/typeB/typeB2/CMakeLists.txt
+++ b/test/plugins/typeB/typeB2/CMakeLists.txt
@@ -1,11 +1,13 @@
-SET (PluginName type_b2)
-FILE (GLOB_RECURSE PluginSources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} TypeB2.vala)
-SET (PluginCustomVapis
+SET (LibName type_b2)
+SET (LibIsPlugin ON)
+SET (LibNoApi ON)
+FILE (GLOB_RECURSE LibSources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} TypeB2.vala)
+SET (LibCustomVapis
     ${CMAKE_BINARY_DIR}/src/iface/${PROJECT_LOWERCASE_NAME}-iface-${MAJOR}.vapi
     ${CMAKE_BINARY_DIR}/test/loader_test-iface/loader_test-iface-${MAJOR}.vapi
 )
-SET (PluginLinkLibs gobject-plugin-iface loader_test-iface)
+SET (LibLinkLibs gobject-plugin-iface loader_test-iface)
 INCLUDE_DIRECTORIES ("${CMAKE_BINARY_DIR}/src/iface"
                      "${CMAKE_BINARY_DIR}/test/loader_test-iface"
 )
-INCLUDE (ValaPluginCommonRules)
+INCLUDE (ValaLibCommonRules)
