Define WINDOWS/UNIX macroses.

--- a/src/loader/CMakeLists.txt
+++ b/src/loader/CMakeLists.txt
@@ -8,4 +8,9 @@ SET (LC_RELATIVE_PREFIX "..")
 CONFIGURE_FILE ( "${CMAKE_SOURCE_DIR}/cmake/backbone/templates/library_constructor.c.in" "${LibExtraSources}")
 SET (LibLinkLibs ${PROJECT_LOWERCASE_NAME}-iface gmodule-2.0)
 INCLUDE_DIRECTORIES ("${CMAKE_BINARY_DIR}/src/iface")
+IF (WIN32)
+  SET (BinValaOpts -D WINDOWS)
+ELSE (WIN32)
+  SET (BinValaOpts -D UNIX)
+ENDIF (WIN32)
 INCLUDE (ValaLibCommonRules)
