Fix: BinValaOpts -> LibValaOpts

--- a/src/loader/CMakeLists.txt
+++ b/src/loader/CMakeLists.txt
@@ -9,8 +9,8 @@ CONFIGURE_FILE ( "${CMAKE_SOURCE_DIR}/cmake/backbone/templates/library_construct
 SET (LibLinkLibs ${PROJECT_LOWERCASE_NAME}-iface gmodule-2.0)
 INCLUDE_DIRECTORIES ("${CMAKE_BINARY_DIR}/src/iface")
 IF (WIN32)
-  SET (BinValaOpts -D WINDOWS)
+  SET (LibValaOpts -D WINDOWS)
 ELSE (WIN32)
-  SET (BinValaOpts -D UNIX)
+  SET (LibValaOpts -D UNIX)
 ENDIF (WIN32)
 INCLUDE (ValaLibCommonRules)
